# inspection-info

./: Cargo.toml  README.md
.github/workflows/: publish.yaml  test.yaml
src/: args.rs  dir_mark_gg.sh  dir_marks.rs  main.rs  show_file_size.rs
