[package]
name = "inspect-info"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "in"
path = "src/main.rs"

[dependencies]
local-ip-address = "0.6.1"
argh = "0.1.12"
cli-clipboard = "0.4.0"
sysinfo = "0.30.12"
bytesize = {version = "1.2.0", features = ["serde"]}
parse-size = "1.0.0"
walkdir = "2"
serde = "1.0.204"
serde_json = "1.0.120"
colored = "2.1.0"